# SnapViewer

./: .gitignore  Cargo.toml  README.md  calc.md  color_palette.py  convert_snap.py  convert_snap_sql.py  gui.py  mod.py  note.md  parse_dump.py  qt.py  qtmp.py  requirements.txt  ticks.py  tk.py  tui.py  zip_snap.py
gui/: Cargo.toml
gui/src/: app.rs  font.rs  ipc_worker.rs  main.rs  palette.rs
notes/: note.md  ticks.py
renderer/: Cargo.toml
renderer/src/: allocation.rs  geometry.rs  lib.rs  main.rs  render_loop.rs  ticks.rs  utils.rs
src/: allocation.rs  allocations.rs  application.rs  binding.rs  constants.rs  geometry.rs  lib.rs  lining.rs  load.rs  load_sharded.rs  main.rs  main_deprecated.rs  render_data.rs  render_loop.rs  ticks.rs  ui.rs  utils.rs  viewer_repl.rs  window_transform.rs
src/database/: data_structure.rs  mod.rs  repl.rs  sqlite.rs
src/ticks/: mod.rs  text.rs  text_example.rs
