[package]
name = "snapviewer"
version = "0.0.0"
edition = "2024"
authors = ["da1sypetals"]


[[bin]]
name = "viewer"
path = "src/main.rs"


[[bin]]
name = "sql-repl"
path = "src/database/repl.rs"


[dependencies]
anyhow = "1.0.98"
clap = "4.5.39"
indicatif = "0.17.11"
log = "0.4.27"
nalgebra = "0.33.2"
pretty_env_logger = "0.5.0"
rand = "0.9.1"
rusqlite = { version = "0.36.0", features = ["bundled"] }
rustyline = "16.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
three-d = { version = "0.18.2", features = ["text"] }
toml = "0.8.22"
zip = "4.0.0"
