[package]
name = "snapviewer"
version = "0.0.0"
edition = "2024"
authors = ["da1sypetals"]


[lib]
name = "snapviewer"
crate-type = ["cdylib", "rlib"]


[dependencies]
anyhow = "1.0.98"
indicatif = "0.17.11"
log = "0.4.27"
memory-stats = "1.2.0"
nalgebra = "0.33.2"
pretty_env_logger = "0.5.0"
pyo3 = { version = "0.25.1", features = ["extension-module"], optional = true }
rand = "0.9.1"
rusqlite = "0.36.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
three-d = { version = "0.18.2", features = ["text"] }
zip = "4.0.0"
zmq = "0.10"
clap = { version = "4.5", features = ["derive"] }
# rustyline = "16.0.0"


[features]
default = ["bundled-sqlite", "python"]
bundled-sqlite = ["rusqlite/bundled"]
python = ["pyo3"]

[[bin]]
name = "snapviewer-renderer"
path = "src/main.rs"
