[package]
name = "snapviewer"
version = "0.0.0"
edition = "2024"
authors = ["da1sypetals"]


[lib]
name = "snapviewer"
crate-type = ["rlib"]


[dependencies]
anyhow = "1.0.98"
indicatif = "0.17.11"
log = "0.4.27"
memory-stats = "1.2.0"
nalgebra = "0.33.2"
pretty_env_logger = "0.5.0"
rand = "0.9.1"
rusqlite = "0.36.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
three-d = { version = "0.18.2", features = ["text"] }
zip = "4.0.0"
ipc-channel = "0.21"
clap = { version = "4.5", features = ["derive"] }
# rustyline = "16.0.0"


[features]
bundled-sqlite = ["rusqlite/bundled"]

[[bin]]
name = "snapviewer-renderer"
path = "src/main.rs"
